nginx-ic/uri-routing/uri-ing-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uri-ingress-external
  namespace: ingress-nginx
  annotations:
    #nginx.org/rewrites: /$1
spec:
  rules:
    - host: devbinx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-svc-sales
                port:
                  number: 80
  ingressClassName: external-nginx
