nginx-ic/uri-routing/uri-ing-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uri-ingress-internal
  namespace: ingress-nginx
  annotations:
    #nginx.org/rewrites: /$1
spec:
  rules:
    - host: devbinx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-svc-menu
                port:
                  number: 80
  ingressClassName: nginx-internal
