nginx-ic/uri-routing/uri-ing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uri-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: devbinx.com
    http:
      paths:
      - path: /account
        pathType: Prefix
        backend:
          service:
            name: demo-svc-account
            port:
              number: 80
      - path: /menu
        pathType: Prefix
        backend:
          service:
            name: demo-svc-menu
            port:
              number: 80
      - path: /sales
        pathType: Prefix
        backend:
          service:
            name: demo-svc-sales
            port:
              number: 80
  ingressClassName: nginx
